Fixed wrong size of background vs viewpord and black fade

--- a/main.css
+++ b/main.css
@@ -17,8 +17,15 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:ital,wght@0,900;1,400);
 
 html {
+  /* 
   height: 100vh;
   width: 100vw;
+  */
+  left: 0px;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  
 }
 
 #keepAlive {
@@ -85,8 +92,8 @@ img[src="about:blank"] {
 
 .screen {
   display: flex;
-  width: 100vw;
-  height: 100vh;
+  /* width: 100vw;
+  height: 100vh; */
   left: 0px;
   top: 0px;
   right: 0px;
